# rubot

./: .env.example  .gitignore  OVERVIEW.md  README.md
agents/rubot-agent-template/: Dockerfile  README.md  pyproject.toml  start.sh
agents/rubot-agent-template/app/: config.py  main.py  models.py  prompt.txt
agents/rubot-agent-template/app/agent/: deps.py  runner.py  template_agent.py  tools.py
agents/rubot-conversational/: Dockerfile  README.md  pyproject.toml  start.sh
agents/rubot-conversational/app/: config.py  main.py  models.py  prompt.txt
agents/rubot-conversational/app/agent/: conversational_agent.py  deps.py  runner.py
agents/rubot-orchestrator/: Dockerfile  README.md  pyproject.toml  start.sh
agents/rubot-orchestrator/app/: capabilities_client.py  config.py  main.py  middleware_client.py  models.py  planner_agent.py  router.py  routing_models.py  runner.py
agents/rubot-orchestrator/tests/: test_planner_context.py  test_router_integration.py  test_routing_models.py
chat-source/: README.md  chat-source.json.example
docs/: README.md  architecture.md  creating-new-product.md  dashboard.md  env-vars.md  local-dev.md  observability.md  superadmin.md
guardrails/: Dockerfile  README.md  config.json  pipeline.py  pyproject.toml  start.sh
guardrails/app/: config.py  main.py
guardrails/input/mlp/: guardrail.py
guardrails/input/regex/: banned_words.txt  guardrail.py
guardrails/output/: guardrail.py
guardrails/output/prompts/: attack.txt  bias.txt  nsfw.txt  privacy.txt  security.txt  toxicity.txt
public-docs/: creating-new-agent.md  deploy.md
scripts/: dev-setup.sh  init-project.sh
shared-packages/: README.md
workers/rubot-client/: package-lock.json  package.json  wrangler.jsonc
workers/rubot-client/src/components/: TenantNav.astro
workers/rubot-client/src/layouts/: Auth.astro  Dashboard.astro
workers/rubot-client/src/lib/: middleware.ts  session.ts
workers/rubot-client/src/pages/: forgot-password.astro  index.astro  login.astro  register.astro  reset-password.astro
workers/rubot-gateway/: README.md  package.json  tsconfig.json  wrangler.jsonc
workers/rubot-gateway/src/: index.ts  types.ts
workers/rubot-gateway/src/lib/: bearer.ts  (+1 more)
workers/rubot-middleware/: README.md  package.json  schema.sql  tsconfig.json  wrangler.jsonc
workers/rubot-middleware/src/: index.ts  types.ts
workers/rubot-open-client/: package-lock.json  package.json  wrangler.jsonc
workers/rubot-superadmin/: package-lock.json  package.json  worker-configuration.d.ts  wrangler.jsonc
(+46 files in other folders)
