[project]
name = "rubot-guardrails"
version = "0.1.0"
description = "Guardrails service — input/output safety pipeline wrapping the orchestrator"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.6",
    "uvicorn[standard]>=0.34.0",
    "pydantic-settings>=2.12.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "scikit-learn>=1.4.0",
    "joblib>=1.3.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40.0"]
dev = [
    "black>=24.0.0",
    "isort>=5.13.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py311", "py312"]

[tool.isort]
profile = "black"
line_length = 88
