[build-system]
requires = ["setuptools>=70"]

[project]
name = "rubot-orchestrator"
version = "0.1.0"
description = "Rubot orchestrator — routes gateway requests to specialist agents using an LLM planner."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pydantic-ai>=0.0.50",
    "httpx>=0.28.0",
    "openai>=1.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "rubot-config",
    "rubot-logger[fastapi]",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.22.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
